Overflow added to body element to fix horizontal scrolling of page on desktop

--- a/src/scss/util/_reset.scss
+++ b/src/scss/util/_reset.scss
@@ -12,4 +12,5 @@ html {
 
 body {
 	margin: 0;
+	overflow: hidden;
 }
